alignment text fix

--- a/styles/styles.css
+++ b/styles/styles.css
@@ -214,6 +214,7 @@ header{
     }
 
     fieldset{
+        text-align: left;
         all: unset;
         display: flex;
         flex-wrap: wrap;
